--- a/src/pages/Macharia.css
+++ b/src/pages/Macharia.css
@@ -20,7 +20,7 @@ width: 100%;
 font-size: 25px;
 }
 .T-SETOR{  
-  padding: 0 0 1REM 0REM;
+  padding: 0 0 0 3rem;
   font-size: 25px;
   font-weight: 700;
 }
