--- a/src/pages/Fusão.css
+++ b/src/pages/Fusão.css
@@ -2,22 +2,20 @@
     margin: 2px;
     padding: 0;
 }
-
 header{
     width: 90%;
     font-size:3rem;
     font-weight:700;
     padding-top: 3rem;
 }
-img {
+img{
     width: 95%;
     padding-top: 2rem; 
 }
  div p{
-width: 95%;
-font-size: 24px;
-padding-top: 2px;
-padding-left: 6px;
+width:90%;
+font-size:21px;
+padding: 0 0 0 10px;
 }
 .pçs{
     width: 90%;
